--- a/src/components/Contact/Form.module.css
+++ b/src/components/Contact/Form.module.css
@@ -1,10 +1,20 @@
+.formContainer {
+  height: 80dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .contactForm {
   width: 40dvw;
-  height: 100dvh;
-  
+  height: fit-content;
+
   input {
     padding: 12px;
     border-radius: 4px;
+    border: 3px solid var(--main);
+    font-size: medium;
+    font-family: "Inter", sans-serif;
   }
 
   button {
@@ -26,12 +36,14 @@
 .row2 {
   width: 100%;
   margin-top: 10px;
-  height: 50%;
   textarea {
     width: 100%;
+    height: 40dvh;
     padding: 12px;
-    height: 100%;
     border-radius: 4px;
     resize: vertical;
+    border: 3px solid var(--main);
+    font-size: medium;
+    font-family: "Inter", sans-serif;
   }
 }
