--- a/src/components/Skills/SkillBox.module.css
+++ b/src/components/Skills/SkillBox.module.css
@@ -1,23 +1,24 @@
 .box {
-  width: 192px;
-  height: 64px;
-  margin: 16px;
-  padding: 8px;
+  width: 12em;
+  height: 4em;
+  margin: 1em;
+  padding: 0.5em;
   border-radius: 4px;
   display: flex;
   align-items: center;
   margin: 10px;
   background-color: white;
+  box-shadow: 2px 5px 16px 0px #000000, 5px 5px 15px 5px rgba(197, 197, 197, 0);
 }
 
 .boxImage {
-  width: 48px;
-  height: 48px;
+  width: 3em;
+  height: 3em;
 }
 
 .boxText {
-  height: 48px;
-  margin-left: 16px;
+  height: 3em;
+  margin-left: 1em;
   align-content: center;
   font-size: large;
   /* background-color: blueviolet; */
