--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,8 @@ button:focus-visible {
   }
 } */
 
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -75,4 +77,6 @@ button:focus-visible {
 
 body {
   position: relative;
+  font-family: "Inter", sans-serif;
+  /* font-weight: 400; */
 }
