--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   --color-2: #86c232;
   --color-1-backup: #b23c23;
   --color-2-backup: #ff5733;
+  --accent-1: #fe5b29;
   --main: #222629;
   --color-4: #474b4f;
   --color-5: #6b6e70;
