--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@ button:focus-visible {
 } */
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+DK+Loopet:wght@100..400&display=swap");
 
 * {
   margin: 0;
@@ -78,5 +79,6 @@ button:focus-visible {
 body {
   position: relative;
   font-family: "Inter", sans-serif;
+  overflow-x: hidden;
   /* font-weight: 400; */
 }
