--- a/src/sections/About.module.css
+++ b/src/sections/About.module.css
@@ -7,16 +7,6 @@
   background-color: var(--main);
 }
 
-/* .educationDetails {
-  width: 50vw;
-  height: inherit;
-  padding-top: 10vh;
-  padding-left: 10dvw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-} */
-
 .educationHeading {
     font-size: xx-large;
     padding: 0em 0em 2em 1em;
@@ -25,7 +15,7 @@
 .educationDetails {
   width: 50vw;
   height: inherit;
-  padding-top: 10vh;
+  padding-top: 5.5em;
   padding-left: 10dvw;
   display: flex;
   grid-template-rows: auto 1fr;
