--- a/src/sections/Contact.module.css
+++ b/src/sections/Contact.module.css
@@ -1,5 +1,5 @@
 .contact {
-  padding: 10vh;
+  padding: 5.5em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,9 +13,10 @@
     padding: 0em 0em 0em 1em;
   }
 }
+
 .contactContainer {
-  display: flex;
   width: 80vw;
+  display: flex;
   align-items: center;
   justify-content: space-between;
 }
