--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -10,7 +10,7 @@ a {
   height: 5.5rem;
   width: 100vw;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,15 +32,8 @@ a {
   position: fixed;
   border-radius: 1em;
 
-  /* From https://css.glass */
-  /* background: rgba(34, 38, 41, .3);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px); */
+  background-color: rgba(231, 231, 231, 0.5);
 
-  /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.32);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(20px);
